<resources>
    <string name="app_name">Animal Puzzle</string>
    <string name="action_settings">Settings</string>
    <string name="puzzle_layout_text_text">Start Game</string>

    <string name="menu_save">Save</string>
    <string name="menu_start">Start</string>
    <string name="menu_stop">Stop</string>
    <string name="menu_pause">Pause</string>
    <string name="menu_resume">Resume</string>
    <string name="menu_ea_SPO">EaS</string>
    <string name="mode_ready">Touch Image To Begin!</string>
    <string name="mode_pause">Paused\nTap Screen To Resume</string>
    <string name="mode_lose">Game Over\nTap Image To Play</string>
    <string name="mode_win_prefix">Success!\n</string>
    <string name="mode_win_suffix">in a row\nTap Image to Play</string>
    <string name="message_stopped">Stopped</string>
    <string name="message_off_pad">Off Landing Pad</string>
    <string name="message_too_fast">Too Fast</string>
    <string name="message_bad_angle">Bad Angle</string>
    <string name="save_button">GOTO NEXT</string>
    <string name="button_three">Button3*3</string>
    <string name="button_four">Button4*4</string>
    <string name="button_five">Button5*5</string>
</resources>
